# MinimalQtApp

./: .gitignore  CMakeLists.txt  README.md
